--- a/usr.sbin/makedbm/Attic/makedbm.8
+++ b/usr.sbin/makedbm/Attic/makedbm.8
@@ -25,7 +25,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	$Id: makedbm.8,v 1.3 1994/08/23 19:35:30 moj Exp $
+.\"	$Id: makedbm.8,v 1.1 1995/10/23 07:46:13 deraadt Exp deraadt $
 .\"
 .Dd July 19, 1994
 .Dt MAKEDBM 8
