--- a/usr.sbin/named/Attic/named.8
+++ b/usr.sbin/named/Attic/named.8
@@ -30,7 +30,7 @@
 .\" SUCH DAMAGE.
 .\"
 .\"     from: @(#)named.8	6.9 (Berkeley) 3/16/91
-.\"	$Id: named.8,v 1.5 1995/09/25 23:48:45 jtc Exp $
+.\"	$Id: named.8,v 1.1 1995/10/18 08:47:50 deraadt Exp dm $
 .\"
 .Dd March 16, 1991
 .Dt NAMED 8
