--- a/usr.sbin/named/tools/nslookup/Attic/nslookup.8
+++ b/usr.sbin/named/tools/nslookup/Attic/nslookup.8
@@ -30,7 +30,7 @@
 .\" SUCH DAMAGE.
 .\"
 .\"	from: @(#)nslookup.8	5.3 (Berkeley) 6/24/90
-.\"	$Id: nslookup.8,v 1.3 1995/09/25 23:48:50 jtc Exp $
+.\"	$Id: nslookup.8,v 1.1 1995/10/18 08:47:55 deraadt Exp dm $
 .\"
 .TH NSLOOKUP 8 "June 24, 1990"
 .UC 6
