--- a/bin/cat/cat.1
+++ b/bin/cat/cat.1
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: cat.1,v 1.12 1995/09/27 05:38:55 cgd Exp $
 .\"	$NetBSD: cat.1,v 1.12 1995/09/27 05:38:55 cgd Exp $
 .\"
 .\" Copyright (c) 1989, 1990, 1993
