--- a/bin/chio/chio.1
+++ b/bin/chio/chio.1
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: chio.1,v 1.1.1.1 1996/04/03 00:34:38 thorpej Exp $
 .\"	$NetBSD: chio.1,v 1.1.1.1 1996/04/03 00:34:38 thorpej Exp $
 .\"
 .\" Copyright (c) 1996 Jason R. Thorpe <thorpej@and.com>
