--- a/bin/csh/csh.1
+++ b/bin/csh/csh.1
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: csh.1,v 1.10 1995/03/21 09:02:35 cgd Exp $
 .\"	$NetBSD: csh.1,v 1.10 1995/03/21 09:02:35 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1993
