--- a/bin/dd/dd.1
+++ b/bin/dd/dd.1
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: dd.1,v 1.5 1995/03/21 09:04:04 cgd Exp $
 .\"	$NetBSD: dd.1,v 1.5 1995/03/21 09:04:04 cgd Exp $
 .\"
 .\" Copyright (c) 1990, 1993
