--- a/bin/kill/kill.1
+++ b/bin/kill/kill.1
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: kill.1,v 1.8 1995/09/07 06:30:26 jtc Exp $
 .\"	$NetBSD: kill.1,v 1.8 1995/09/07 06:30:26 jtc Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1993
