--- a/bin/ln/symlink.7
+++ b/bin/ln/symlink.7
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: symlink.7,v 1.4 1996/04/25 15:44:56 mycroft Exp $
 .\"	$NetBSD: symlink.7,v 1.4 1996/04/25 15:44:56 mycroft Exp $
 .\"
 .\" Copyright (c) 1992, 1993, 1994
