--- a/bin/ls/ls.1
+++ b/bin/ls/ls.1
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: ls.1,v 1.14 1995/12/05 02:44:01 jtc Exp $
 .\"	$NetBSD: ls.1,v 1.14 1995/12/05 02:44:01 jtc Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1991, 1993, 1994
