--- a/bin/pax/pax.1
+++ b/bin/pax/pax.1
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: pax.1,v 1.3 1995/03/21 09:07:37 cgd Exp $
 .\"	$NetBSD: pax.1,v 1.3 1995/03/21 09:07:37 cgd Exp $
 .\"
 .\" Copyright (c) 1992 Keith Muller.
