--- a/sbin/fsck_ffs/Attic/fsck.8
+++ b/sbin/fsck_ffs/Attic/fsck.8
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: fsck.8,v 1.10 1995/07/12 01:49:16 cgd Exp $
 .\"	$NetBSD: fsck.8,v 1.10 1995/07/12 01:49:16 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1989, 1991, 1993
