--- a/sbin/fsck_msdos/fsck_msdos.8
+++ b/sbin/fsck_msdos/fsck_msdos.8
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: fsck_msdos.8,v 1.1 1996/05/14 17:39:35 ws Exp $
 .\"	$NetBSD: fsck_msdos.8,v 1.1 1996/05/14 17:39:35 ws Exp $
 .\"
 .\" Copyright (C) 1995 Wolfgang Solfrank
