--- a/usr.bin/chflags/Attic/chflags.1
+++ b/usr.bin/chflags/Attic/chflags.1
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: chflags.1,v 1.4 1995/08/31 22:50:22 jtc Exp $
 .\"	$NetBSD: chflags.1,v 1.4 1995/08/31 22:50:22 jtc Exp $
 .\"
 .\" Copyright (c) 1989, 1990, 1993, 1994
