--- a/usr.bin/cksum/Attic/cksum.1
+++ b/usr.bin/cksum/Attic/cksum.1
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: cksum.1,v 1.8 1995/09/02 05:45:15 jtc Exp $
 .\"	$NetBSD: cksum.1,v 1.8 1995/09/02 05:45:15 jtc Exp $
 .\"
 .\" Copyright (c) 1991, 1993
