--- a/usr.bin/du/du.1
+++ b/usr.bin/du/du.1
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: du.1,v 1.4.2.1 1995/12/05 02:45:41 jtc Exp $
 .\"	$NetBSD: du.1,v 1.4.2.1 1995/12/05 02:45:41 jtc Exp $
 .\"
 .\" Copyright (c) 1990, 1993
