--- a/usr.bin/error/Attic/error.1
+++ b/usr.bin/error/Attic/error.1
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: error.1,v 1.3 1995/09/02 06:15:20 jtc Exp $
 .\"	$NetBSD: error.1,v 1.3 1995/09/02 06:15:20 jtc Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1993
