--- a/usr.bin/file/file.1
+++ b/usr.bin/file/file.1
@@ -1,5 +1,5 @@
+.\" $OpenBSD: file.1,v 1.2 1995/12/14 03:30:02 deraadt Exp $
 .TH FILE 1 "Copyright but distributable"
-.\" $Id: file.1,v 1.8 1995/10/27 23:33:18 christos Exp $
 .SH NAME
 file
 \- determine file type
