--- a/usr.bin/ftp/ftp.1
+++ b/usr.bin/ftp/ftp.1
@@ -1,3 +1,4 @@
+.\" 	$OpenBSD: ftp.1,v 1.11 1995/09/08 01:06:24 tls Exp $
 .\" 	$NetBSD: ftp.1,v 1.11 1995/09/08 01:06:24 tls Exp $
 .\"
 .\" Copyright (c) 1985, 1989, 1990, 1993
