--- a/usr.bin/encrypt/encrypt.1
+++ b/usr.bin/encrypt/encrypt.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD$
+.\"	$OpenBSD: encrypt.1,v 1.1 1996/08/08 02:07:22 downsj Exp $
 .\"
 .\" Copyright (c) 1996, Jason Downs.  All rights reserved.
 .\"
@@ -59,6 +59,7 @@ reads one string per line from standard input, encrypting each one with
 the same
 .Ar salt .
 .Sh SEE ALSO
+.Xr crypt 3 ,
 .Xr adduser 8
 .Sh HISTORY
 .Nm encrypt
