--- a/bin/pdksh/Attic/README
+++ b/bin/pdksh/Attic/README
@@ -1,6 +1,6 @@
-$OpenBSD$
+$OpenBSD: README,v 1.1.1.1 1996/08/14 06:19:10 downsj Exp $
 
-Last updated June '96 for pdksh-5.2.6.
+Last updated August '96 for pdksh-5.2.8.
 	(check ftp://ftp.cs.mun.ca:/pub/pdksh/ or
 	 http://www.cs.mun.ca/~michael/pdksh/ for new versions/patches)
 
