--- a/usr.bin/cdio/cdio.1
+++ b/usr.bin/cdio/cdio.1
@@ -1,7 +1,7 @@
-.\" $OpenBSD: cdio.1,v 1.3 1996/08/24 08:25:14 deraadt Exp $
+.\" $OpenBSD: cdio.1,v 1.4 1996/08/26 08:22:00 deraadt Exp $
 .Dd July 3, 1995
 .Dt CDIO 1
-.Os OpenBSD
+.Os OpenBSD 2.0
 .Sh NAME
 .Nm cdio
 .Nd compact disc control utility
