--- a/share/man/man4/man4.mvme68k/Attic/console.4
+++ b/share/man/man4/man4.mvme68k/Attic/console.4
@@ -33,11 +33,11 @@
 .\" SUCH DAMAGE.
 .\"
 .\"     from: @(#)cons.4	5.2 (Berkeley) 3/27/91
-.\"	$Id: console.4,v 1.1 1994/09/19 17:40:48 chopps Exp $
+.\"	$Id: console.4,v 1.1 1995/11/06 21:30:03 deraadt Exp $
 .\"
 .Dd August 30, 1994
 .Dt CONSOLE 4 amiga
-.Os NetBSD 1.0
+.Os
 .Sh NAME
 .Nm console
 .Nd
