--- a/share/man/man4/man4.pc532/Attic/lpt.4
+++ b/share/man/man4/man4.pc532/Attic/lpt.4
@@ -28,11 +28,11 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\"	$Id: lpt.4,v 1.2 1995/11/28 08:03:29 jtc Exp $
+.\"	$Id: lpt.4,v 1.2 1995/12/14 05:41:45 deraadt Exp $
 .\"
 .Dd December 1, 1994
 .Dt LPT 4 pc532
-.Os NetBSD 1.0
+.Os
 .Sh NAME
 .Nm lpt
 .Nd Parallel port driver
