Attempt at cleanup.

--- a/share/man/man4/man4.vax/Attic/mtio.4
+++ b/share/man/man4/man4.vax/Attic/mtio.4
@@ -40,7 +40,7 @@
 .Sh NAME
 .Nm mtio
 .Nd
-.Tn NetBSD
+.Tn OpenBSD
 magtape interface
 .Sh DESCRIPTION
 Each tape subsystem has a couple of special devices associated with it.
