Remove remnants of Tahoe.

--- a/share/man/man4/man4.tahoe/Attic/ace.4
+++ b/share/man/man4/man4.tahoe/Attic/ace.4
@@ -30,7 +30,7 @@
 .\" SUCH DAMAGE.
 .\"
 .\"     from: @(#)ace.4	6.5 (Berkeley) 3/27/91
-.\"	$Id: ace.4,v 1.2 1993/08/01 07:36:56 mycroft Exp $
+.\"	$Id: ace.4,v 1.1 1995/10/18 08:44:32 deraadt Exp $
 .\"
 .Dd March 27, 1991
 .Dt ACE 4 tahoe
