Remove remnants of Tahoe.

--- a/share/man/man4/man4.tahoe/Attic/cy.4
+++ b/share/man/man4/man4.tahoe/Attic/cy.4
@@ -30,7 +30,7 @@
 .\" SUCH DAMAGE.
 .\"
 .\"     from: @(#)cy.4	6.4 (Berkeley) 3/27/91
-.\"	$Id: cy.4,v 1.2 1993/08/01 07:36:53 mycroft Exp $
+.\"	$Id: cy.4,v 1.1 1995/10/18 08:44:32 deraadt Exp $
 .\"
 .Dd March 27, 1991
 .Dt CY 4 tahoe
