--- a/share/man/man4/man4.tahoe/Attic/enp.4
+++ b/share/man/man4/man4.tahoe/Attic/enp.4
@@ -30,7 +30,7 @@
 .\" SUCH DAMAGE.
 .\"
 .\"     from: @(#)enp.4	5.4 (Berkeley) 3/27/91
-.\"	$Id: enp.4,v 1.2 1993/08/01 07:36:51 mycroft Exp $
+.\"	$Id: enp.4,v 1.1 1995/10/18 08:44:32 deraadt Exp $
 .\"
 .Dd March 27, 1991
 .Dt ENP 4 tahoe
