--- a/share/man/man4/man4.tahoe/Attic/ik.4
+++ b/share/man/man4/man4.tahoe/Attic/ik.4
@@ -30,7 +30,7 @@
 .\" SUCH DAMAGE.
 .\"
 .\"     from: @(#)ik.4	6.3 (Berkeley) 3/27/91
-.\"	$Id: ik.4,v 1.2 1993/08/01 07:36:50 mycroft Exp $
+.\"	$Id: ik.4,v 1.1 1995/10/18 08:44:32 deraadt Exp $
 .\"
 .Dd March 27, 1991
 .Dt IK 4
