--- a/share/man/man4/man4.tahoe/Attic/lp.4
+++ b/share/man/man4/man4.tahoe/Attic/lp.4
@@ -30,7 +30,7 @@
 .\" SUCH DAMAGE.
 .\"
 .\"     from: @(#)lp.4	6.2 (Berkeley) 3/27/91
-.\"	$Id: lp.4,v 1.2 1993/08/01 07:36:49 mycroft Exp $
+.\"	$Id: lp.4,v 1.1 1995/10/18 08:44:32 deraadt Exp $
 .\"
 .Dd March 27, 1991
 .Dt LP 4 tahoe
