Remove remnants of Tahoe.

--- a/share/man/man4/man4.tahoe/Attic/mem.4
+++ b/share/man/man4/man4.tahoe/Attic/mem.4
@@ -30,7 +30,7 @@
 .\" SUCH DAMAGE.
 .\"
 .\"     from: @(#)mem.4	6.3 (Berkeley) 3/27/91
-.\"	$Id: mem.4,v 1.2 1993/08/01 07:36:47 mycroft Exp $
+.\"	$Id: mem.4,v 1.1 1995/10/18 08:44:32 deraadt Exp $
 .\"
 .Dd March 27, 1991
 .Dt MEM 4 tahoe
