--- a/share/man/man4/man4.tahoe/Attic/mtio.4
+++ b/share/man/man4/man4.tahoe/Attic/mtio.4
@@ -30,7 +30,7 @@
 .\" SUCH DAMAGE.
 .\"
 .\"     from: @(#)mtio.4	6.4 (Berkeley) 5/6/91
-.\"	$Id: mtio.4,v 1.2 1993/08/01 07:36:46 mycroft Exp $
+.\"	$Id: mtio.4,v 1.1 1995/10/18 08:44:33 deraadt Exp $
 .\"
 .Dd May 6, 1991
 .Dt MTIO 4
