--- a/share/man/man4/man4.tahoe/Attic/vd.4
+++ b/share/man/man4/man4.tahoe/Attic/vd.4
@@ -30,7 +30,7 @@
 .\" SUCH DAMAGE.
 .\"
 .\"     from: @(#)vd.4	6.4 (Berkeley) 3/27/91
-.\"	$Id: vd.4,v 1.2 1993/08/01 07:36:45 mycroft Exp $
+.\"	$Id: vd.4,v 1.1 1995/10/18 08:44:33 deraadt Exp $
 .\"
 .Dd March 27, 1991
 .Dt VD 4 tahoe
