--- a/share/man/man4/man4.tahoe/Attic/vx.4
+++ b/share/man/man4/man4.tahoe/Attic/vx.4
@@ -30,7 +30,7 @@
 .\" SUCH DAMAGE.
 .\"
 .\"     from: @(#)vx.4	6.3 (Berkeley) 3/27/91
-.\"	$Id: vx.4,v 1.2 1993/08/01 07:36:44 mycroft Exp $
+.\"	$Id: vx.4,v 1.1 1995/10/18 08:44:33 deraadt Exp $
 .\"
 .Dd March 27, 1991
 .Dt VX 4 tahoe
