--- a/share/man/man7/hier.7
+++ b/share/man/man7/hier.7
@@ -1,3 +1,4 @@
+.\"	$OpenBSD$
 .\"	$NetBSD: hier.7,v 1.7 1994/11/30 19:07:10 jtc Exp $
 .\"
 .\" Copyright (c) 1990, 1993
@@ -364,10 +365,6 @@ see
 .Xr sendmail 8
 .It Li output/
 line printer spooling directories
-.It Li secretmail/ 
-secretmail spool directory;
-see
-.Xr xget 1
 .It Li uucp/ 
 uucp spool directory
 .It Li uucppublic/
