--- a/share/man/man4/man4.sparc/xy.4
+++ b/share/man/man4/man4.sparc/xy.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: zs.4,v 1.1 1998/03/07 21:54:29 johns Exp $
+.\"	$OpenBSD: xy.4,v 1.1 1998/03/07 23:34:09 johns Exp $
 .\"
 .\" Copyright (c) 1998 The OpenBSD Project 
 .\" All rights reserved.
@@ -24,4 +24,6 @@ the VME bus.
 .Sh HISTORY
 The 
 .Nm
-driver first appeared in NetBSD and was written by Charles D. Cranor.
+driver first appeared in NetBSD and was written by 
+.br
+Charles D. Cranor.
