--- a/sbin/fsirand/fsirand.8
+++ b/sbin/fsirand/fsirand.8
@@ -26,7 +26,7 @@
 .\" OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
 .\" ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\"	$OpenBSD: fsirand.8,v 1.7 1997/06/14 20:51:57 deraadt Exp $
+.\"	$OpenBSD: fsirand.8,v 1.8 1998/03/07 21:53:32 millert Exp $
 .\"
 .Dd January 25, 1997
 .Dt FSIRAND 8
@@ -72,7 +72,7 @@ but the system should be rebooted via ``reboot -n'' afterwards.
 .Bl -tag -width indent
 The available options are as follows:
 .It Fl b
-Use the default block size (usuallyt 512 bytes) instead
+Use the default block size (usually 512 bytes) instead
 of the value gleaned from the disklabel.
 .It Fl f
 Force
