--- a/usr.bin/elf2aout/Attic/elf2aout.1
+++ b/usr.bin/elf2aout/Attic/elf2aout.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: elf2aout.1,v 1.1.1.1 1996/12/22 15:03:32 graichen Exp $
+.\"	$OpenBSD: elf2aout.1,v 1.2 1997/05/05 09:32:34 graichen Exp $
 .\"
 .\" Copyright (c) 1996 Per Fogelstrom
 .\" 
@@ -50,8 +50,9 @@ to a.out format, into file
 .Ar aoutexec
 , suitable for bootstrapping certain
 .Nm MIPS
-systems. Systems requiering this
-conversion is the
-.Nm pmax.
+systems.
+The systems currently requiring this
+conversion are:
+.Nm pmax .
 .Sh DIAGNOSTICS
 If the conversion fails a diagnostic message is printed to explain the cause.
