--- a/share/man/man5/networks.5
+++ b/share/man/man5/networks.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: networks.5,v 1.3 1998/03/16 05:06:47 millert Exp $
+.\"	$OpenBSD: networks.5,v 1.4 1998/05/12 09:15:18 deraadt Exp $
 .\"	$NetBSD: networks.5,v 1.3 1994/11/30 19:31:23 jtc Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
@@ -64,7 +64,7 @@ though local
 changes may be required to bring it up to date regarding unofficial aliases
 and/or unknown networks.
 .Pp
-Network number may be specified in the conventional
+Network numbers may be specified in the conventional
 ``.''  (dot) notation using the
 .Xr inet_network 3
 routine
