--- a/share/man/man4/man4.sparc/cgfour.4
+++ b/share/man/man4/man4.sparc/cgfour.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cgfour.4,v 1.1 1998/03/07 21:17:02 johns Exp $
+.\"	$OpenBSD: cgfour.4,v 1.2 1998/03/08 01:06:55 johns Exp $
 .\"	$NetBSD: cgfour.4,v 1.2 1997/10/08 22:00:05 jtc Exp $
 .\"
 .\" Copyright (c) 1996 The NetBSD Foundation, Inc.
@@ -53,7 +53,8 @@ the
 .Xr mmap 2
 system call. The
 .Nm
-driver supports the minimal ioctl's needed to run X11.
+driver supports the minimal ioctl's needed to run
+.Xr X 1 .
 .Sh SEE ALSO
 .Xr bwtwo 4 ,
 .Xr cgtwo 4 ,
