--- a/share/man/man4/man4.sparc/cgtwo.4
+++ b/share/man/man4/man4.sparc/cgtwo.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cgtwo.4,v 1.1 1998/03/07 21:17:03 johns Exp $
+.\"	$OpenBSD: cgtwo.4,v 1.2 1998/03/08 01:07:01 johns Exp $
 .\"	$NetBSD: cgtwo.4,v 1.3 1997/10/08 22:00:08 jtc Exp $
 .\"
 .\" Copyright (c) 1996 The NetBSD Foundation, Inc.
@@ -52,7 +52,8 @@ the
 .Xr mmap 2
 system call. The
 .Nm
-driver supports the minimal ioctl's needed to run X11.
+driver supports the minimal ioctl's needed to run
+.Xr X 1 .
 .Sh SEE ALSO
 .Xr bwtwo 4 ,
 .Xr cgthree 4 ,
