--- a/share/man/man4/man4.sparc/tcx.4
+++ b/share/man/man4/man4.sparc/tcx.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: tcx.4,v 1.1 1998/03/07 21:17:06 johns Exp $
+.\"	$OpenBSD: tcx.4,v 1.2 1998/03/08 01:07:03 johns Exp $
 .\"	$NetBSD: tcx.4,v 1.3 1997/10/08 22:00:14 jtc Exp $
 .\"
 .\" Copyright (c) 1996 The NetBSD Foundation, Inc.
@@ -54,8 +54,9 @@ the
 .Xr mmap 2
 system call. The
 .Nm
-driver supports the minimal ioctl's needed to run X11, and can be operated
-in
+driver supports the minimal ioctl's needed to run
+.Xr X 1 ,
+and can be operated in
 .Xr cgthree 4
 emulation mode.
 .Sh SEE ALSO
