--- a/share/man/man4/man4.sparc/esp.4
+++ b/share/man/man4/man4.sparc/esp.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: zs.4,v 1.1 1998/03/07 21:54:29 johns Exp $
+.\"	$OpenBSD: esp.4,v 1.1 1998/03/07 23:34:08 johns Exp $
 .\"
 .\" Copyright (c) 1998 The OpenBSD Project 
 .\" All rights reserved.
@@ -26,7 +26,6 @@ The
 .Nm
 is an on-board or SBus SCSI controller based on the NCR 53c94 chip, found 
 on Sun 4/300, sun4c and sun4m workstations.  
-
 .Sh DEVICE FLAGS
 .Bl -tag -width speaker -compact
 .It Bits 0-7 disable disconnect/reselect for the corresponding target
