--- a/share/man/man4/man4.sparc/tcx.4
+++ b/share/man/man4/man4.sparc/tcx.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: tcx.4,v 1.2 1998/03/08 01:07:03 johns Exp $
+.\"	$OpenBSD: tcx.4,v 1.3 1998/07/03 20:35:07 jason Exp $
 .\"	$NetBSD: tcx.4,v 1.3 1997/10/08 22:00:14 jtc Exp $
 .\"
 .\" Copyright (c) 1996 The NetBSD Foundation, Inc.
@@ -42,7 +42,6 @@
 .Nm tcx
 .Nd accelerated 8/24-bit color frame buffer
 .Sh SYNOPSIS
-.Cd "tcx0 at sbus? slot ? offset ?"
 .Cd "tcx* at sbus? slot ? offset ?"
 .Sh DESCRIPTION
 The 
