audioamd man page + more clean up

--- a/share/man/man4/man4.sparc/Attic/hme.4
+++ b/share/man/man4/man4.sparc/Attic/hme.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD$
+.\"     $OpenBSD: hme.4,v 1.1 1998/07/13 02:59:52 jason Exp $
 .\"
 .\" Copyright (c) 1998 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -43,7 +43,9 @@ The
 interface provides access to the 10Mb/s and 100Mb/s Ethernet networks via the
 .Tn National
 DP83840
-Ethernet chip set.  The 
+Ethernet 10/100 Mb/s Physical Layer
+chip set.
+The 
 .Nm 
 is found on the SunSwift and Sun QuadFastEthernet boards.  
 .Pp
