--- a/sbin/ipf/Attic/ipf.4
+++ b/sbin/ipf/Attic/ipf.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ipf.4,v 1.9 1998/01/26 04:13:33 dgregor Exp $
+.\"	$OpenBSD: ipf.4,v 1.10 1998/07/20 07:18:39 deraadt Exp $
 .TH IPF 4
 .SH NAME
 ipf \- packet filtering kernel interface
@@ -140,7 +140,7 @@ from the list(s).  The values which it will take and recognise are FR_INQUE
 and FR_OUTQUE (see above).
 
 \fBGeneral Logging Flags\fP
-There are two flags which can be set to log packets independantly of the
+There are two flags which can be set to log packets independently of the
 rules used.  These allow for packets which are either passed or blocked
 to be logged.  To set (and clear)/get these flags, two ioctls are
 provided:
