--- a/share/man/man4/man4.sparc/qec.4
+++ b/share/man/man4/man4.sparc/qec.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: qec.4,v 1.1 1998/08/26 05:11:56 jason Exp $
+.\"     $OpenBSD: qec.4,v 1.2 1998/08/28 20:08:04 jason Exp $
 .\"
 .\" Copyright (c) 1998 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -42,7 +42,8 @@ The
 .Nm
 driver is an sbus controller that can contain either one
 .Xr be 4
-Ethernet controller or four
+Ethernet controller (Sun part number SUNW,270-2450)
+or four
 .Xr me 4
 ethernet controllers.
 This driver, like other buses, is not directly available to users.
