--- a/usr.bin/cdio/cdio.1
+++ b/usr.bin/cdio/cdio.1
@@ -1,4 +1,4 @@
-.\" $OpenBSD: cdio.1,v 1.10 1998/07/17 23:35:44 mickey Exp $
+.\" $OpenBSD: cdio.1,v 1.11 1998/08/29 21:11:12 deraadt Exp $
 .Dd July 3, 1995
 .Dt CDIO 1
 .Os OpenBSD 2.0
@@ -40,7 +40,7 @@ The available commands are listed below.  Only as many
 characters as are required to uniquely identify a command
 need be specified. Word
 .Nm play
-can be ommitted.
+can be omitted.
 .Bl -tag -width Cm
 .It Cm play Ar first_track Op Ar last_track
 Play from track 
