--- a/bin/mt/mt.1
+++ b/bin/mt/mt.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mt.1,v 1.7 1998/07/03 07:02:20 deraadt Exp $
+.\"	$OpenBSD: mt.1,v 1.8 1998/09/14 22:13:51 aaron Exp $
 .\"	$NetBSD: mt.1,v 1.8 1996/05/21 10:23:55 mrg Exp $
 .\"
 .\" Copyright (c) 1981, 1990, 1993
@@ -162,9 +162,9 @@ raw magnetic tape interface
 list of SCSI2 density codes
 .El
 .Sh SEE ALSO
-.Xr mtio 4 ,
 .Xr dd 1 ,
 .Xr ioctl 2 ,
+.Xr mtio 4 ,
 .Xr environ 7
 .Sh HISTORY
 The
