--- a/usr.bin/compile_et/compile_et.1
+++ b/usr.bin/compile_et/compile_et.1
@@ -1,8 +1,8 @@
 .\" Copyright (c) 1988 Massachusetts Institute of Technology,
 .\" Student Information Processing Board.  All rights reserved.
 .\"
-.\" $OpenBSD$
-.\" $Header: /home/ncvs/src/usr.bin/compile_et/compile_et.1,v 1.2 1997/06/30 06:42:38 charnier Exp $
+.\" $OpenBSD: compile_et.1,v 1.3 1997/07/01 07:22:04 grr Exp $
+.\" $Header: /cvs/src/usr.bin/compile_et/compile_et.1,v 1.3 1997/07/01 07:22:04 grr Exp $
 .\"
 .Dd	November 22, 1988
 .Os
@@ -14,7 +14,7 @@
 .Nm compile_et
 .Ar file
 .Sh DESCRIPTION
-.Nm Compile_et
+.Nm compile_et
 converts a table listing error-code names and associated messages into
 a C source file suitable for use with the
 .Xr com_err 3
