--- a/bin/csh/USD.doc/csh.2
+++ b/bin/csh/USD.doc/csh.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: csh.2,v 1.2 1996/06/23 14:19:36 deraadt Exp $
+.\"	$OpenBSD: csh.2,v 1.3 1997/11/15 21:51:32 todd Exp $
 .\"	$NetBSD: csh.2,v 1.3 1995/03/21 09:03:35 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1993
@@ -89,7 +89,7 @@ variable
 which causes the shell to not log me off if I hit ^D.  Rather,
 I use the
 .I logout
-command to log off of the system.
+command to log off the system.
 By setting the
 .I mail
 variable, I ask the shell to watch for incoming mail to me.  Every 5 minutes
