--- a/share/man/man4/man4.sparc/qec.4
+++ b/share/man/man4/man4.sparc/qec.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: qec.4,v 1.2 1998/08/28 20:08:04 jason Exp $
+.\"     $OpenBSD: qec.4,v 1.3 1998/09/01 02:45:50 jason Exp $
 .\"
 .\" Copyright (c) 1998 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -45,15 +45,12 @@ driver is an sbus controller that can contain either one
 Ethernet controller (Sun part number SUNW,270-2450)
 or four
 .Xr me 4
-ethernet controllers.
+ethernet controllers (Sun part number SUNW,595-3198).
 This driver, like other buses, is not directly available to users.
 .Sh SEE ALSO
 .Xr be 4 ,
+.Xr qe 4 ,
 .Xr intro 4
-.Sh BUGS
-The
-.Xr me 4
-is not currently supported.
 .Sh HISTORY
 .Ox
 support for the
