--- a/bin/mkdir/mkdir.1
+++ b/bin/mkdir/mkdir.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mkdir.1,v 1.2 1996/06/23 14:20:23 deraadt Exp $
+.\"	$OpenBSD: mkdir.1,v 1.3 1998/09/14 22:13:50 aaron Exp $
 .\"	$NetBSD: mkdir.1,v 1.9 1995/07/25 19:37:13 jtc Exp $
 .\"
 .\" Copyright (c) 1989, 1990, 1993
@@ -57,7 +57,6 @@ as modified by the current
 .Xr umask  2  .
 .Pp
 The options are as follows:
-.Pp
 .Bl -tag -width indent
 .It Fl m
 Set the file permission bits of the final created directory to
