--- a/usr.bin/find/find.1
+++ b/usr.bin/find/find.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: find.1,v 1.15 1997/11/13 08:30:33 deraadt Exp $
+.\"	$OpenBSD: find.1,v 1.16 1998/09/26 19:54:43 aaron Exp $
 .\" Copyright (c) 1990, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
@@ -57,7 +57,6 @@ listed, evaluating an
 of each file in the tree.
 .Pp
 The options are as follows:
-.Pp
 .Bl -tag -width Ds
 .It Fl H
 Causes the file information and file type (see
