--- a/sbin/ipsec/ipsecadm/Attic/ipsecadm.1
+++ b/sbin/ipsec/ipsecadm/Attic/ipsecadm.1
@@ -1,4 +1,4 @@
-.\" $OpenBSD: ipsecadm.1,v 1.17 1998/08/01 22:07:33 angelos Exp $
+.\" $OpenBSD: ipsecadm.1,v 1.18 1998/11/11 22:19:57 aaron Exp $
 .\" Copyright 1997 Niels Provos <provos@physnet.uni-hamburg.de>
 .\" All rights reserved.
 .\"
