--- a/sbin/ipsec/photurisd/Attic/photurisd.8
+++ b/sbin/ipsec/photurisd/Attic/photurisd.8
@@ -1,4 +1,4 @@
-.\" $OpenBSD: photurisd.8,v 1.7 1998/06/18 21:33:06 provos Exp $
+.\" $OpenBSD: photurisd.8,v 1.8 1998/07/24 20:49:06 deraadt Exp $
 .\" Copyright 1997 Niels Provos <provos@physnet.uni-hamburg.de>
 .\" All rights reserved.
 .\"
