move ipsec tools into .

--- a/sbin/ipsec/startkey/Attic/startkey.1
+++ b/sbin/ipsec/startkey/Attic/startkey.1
@@ -1,4 +1,4 @@
-.\" $OpenBSD: startkey.1,v 1.6 1998/05/14 10:46:23 niklas Exp $
+.\" $OpenBSD: startkey.1,v 1.7 1998/11/11 22:19:58 aaron Exp $
 .\" Copyright 1997 Niels Provos <provos@physnet.uni-hamburg.de>
 .\" All rights reserved.
 .\"
