--- a/share/man/man5/acct.5
+++ b/share/man/man5/acct.5
@@ -1,3 +1,4 @@
+.\"	$OpenBSD$
 .\"	$NetBSD: acct.5,v 1.4 1995/10/22 01:40:10 ghudson Exp $
 .\"
 .\" Copyright (c) 1991, 1993
@@ -102,10 +103,10 @@ and its status is saved by setting one of more of the following flags in
 and
 .Dv ASIG .
 .Sh SEE ALSO
-.Xr acct 2 ,
-.Xr accton 8 ,
-.Xr execve 2 ,
 .Xr lastcomm 1 ,
+.Xr acct 2 ,
+.Xr execve 2 ,
+.Xr accton 8 ,
 .Xr sa 8
 .Sh HISTORY
 An
