--- a/share/man/man5/hosts.equiv.5
+++ b/share/man/man5/hosts.equiv.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: hosts.equiv.5,v 1.1 1997/11/30 05:35:25 deraadt Exp $
+.\"	$OpenBSD: hosts.equiv.5,v 1.2 1998/11/26 04:25:58 aaron Exp $
 .\"
 .\" Copyright (c) 1997 Todd Vierling
 .\" Copyright (c) 1997 The NetBSD Foundation, Inc.
@@ -39,12 +39,11 @@
 .Dt HOSTS.EQUIV 5
 .Os
 .Sh NAME
-.Nm hosts.equiv ,
-.Nm .rhosts
+.Nm hosts.equiv , .rhosts
 .Nd trusted remote hosts and host-user pairs
 .Sh DESCRIPTION
 The
-.Nm hosts.equiv
+.Nm
 and
 .Nm .rhosts
 files list hosts and users which are
