--- a/share/man/man7/ascii.7
+++ b/share/man/man7/ascii.7
@@ -1,3 +1,4 @@
+.\"	$OpenBSD$
 .\"	$NetBSD: ascii.7,v 1.3 1994/11/30 19:07:06 jtc Exp $
 .\"
 .\" Copyright (c) 1989, 1990, 1993
@@ -113,6 +114,6 @@ set:
 .El
 .Sh HISTORY
 An
-.Nm ascii
+.Nm
 manual page appeared in
 .At v7 .
