--- a/bin/md5/Attic/rmd160.1
+++ b/bin/md5/Attic/rmd160.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: rmd160.1,v 1.3 1998/01/02 07:04:24 deraadt Exp $
+.\"	$OpenBSD: rmd160.1,v 1.4 1998/09/23 00:13:49 aaron Exp $
 .\"
 .Dd July 16, 1997
 .Dt RMD160 1
@@ -7,7 +7,7 @@
 .Nm rmd160
 .Nd calculate a message-digest fingerprint (checksum) for a file
 .Sh SYNOPSIS
-.Nm
+.Nm rmd160
 .Op Fl ptx
 .Op Fl s Ar string
 .Op Ar file ...
