--- a/bin/md5/sha1.1
+++ b/bin/md5/sha1.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: sha1.1,v 1.4 1998/01/02 07:04:24 deraadt Exp $
+.\"	$OpenBSD: sha1.1,v 1.5 1998/09/23 00:13:49 aaron Exp $
 .\"
 .Dd July 12, 1997
 .Dt SHA1 1
@@ -7,7 +7,7 @@
 .Nm sha1
 .Nd calculate a message-digest fingerprint (checksum) for a file
 .Sh SYNOPSIS
-.Nm
+.Nm sha1
 .Op Fl ptx
 .Op Fl s Ar string
 .Op Ar file ...
