--- a/bin/mkdir/mkdir.1
+++ b/bin/mkdir/mkdir.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mkdir.1,v 1.4 1998/11/06 00:34:08 aaron Exp $
+.\"	$OpenBSD: mkdir.1,v 1.5 1998/11/28 03:20:34 aaron Exp $
 .\"	$NetBSD: mkdir.1,v 1.9 1995/07/25 19:37:13 jtc Exp $
 .\"
 .\" Copyright (c) 1989, 1990, 1993
@@ -44,7 +44,7 @@
 .Nm mkdir
 .Nd make directories
 .Sh SYNOPSIS
-.Nm
+.Nm mkdir
 .Op Fl p
 .Op Fl m Ar mode
 .Ar directory_name  ...
