--- a/sbin/fsdb/fsdb.8
+++ b/sbin/fsdb/fsdb.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: fsdb.8,v 1.8 1998/09/23 01:20:23 aaron Exp $
+.\"	$OpenBSD: fsdb.8,v 1.9 1998/11/11 22:19:57 aaron Exp $
 .\"	$NetBSD: fsdb.8,v 1.5 1997/01/11 05:51:40 lukem Exp $
 .\"
 .\" Copyright (c) 1996 The NetBSD Foundation, Inc.
@@ -42,7 +42,7 @@
 .Nm fsdb
 .Nd FFS debugging/editing tool
 .Sh SYNOPSIS
-.Nm
+.Nm fsdb
 .Op Fl d
 .Fl f Ar fsname
 .Sh DESCRIPTION
