--- a/sbin/init/init.8
+++ b/sbin/init/init.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: init.8,v 1.12 1998/11/11 22:19:57 aaron Exp $
+.\"	$OpenBSD: init.8,v 1.13 1998/11/28 19:56:21 aaron Exp $
 .\"	$NetBSD: init.8,v 1.6 1995/03/18 14:56:31 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
@@ -44,7 +44,7 @@
 .Nm init
 .Nd process control initialization
 .Sh SYNOPSIS
-.Nm
+.Nm init
 .Sh DESCRIPTION
 The
 .Nm
