--- a/usr.bin/gencat/gencat.1
+++ b/usr.bin/gencat/gencat.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: gencat.1,v 1.5 1998/11/20 23:27:15 deraadt Exp $
+.\"	$OpenBSD: gencat.1,v 1.6 1998/11/22 17:11:29 espie Exp $
 .\"
 .\" Copyright (c) 1997 Ken Stailey
 .\"
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\"	$Id: gencat.1,v 1.5 1998/11/20 23:27:15 deraadt Exp $
+.\"	$Id: gencat.1,v 1.6 1998/11/22 17:11:29 espie Exp $
 .\"
 .Dd June 11, 1997
 .Dt GENCAT 1
@@ -33,7 +33,7 @@
 .Nm gencat
 .Nd NLS catalog compiler
 .Sh SYNOPSIS
-.Nm 
+.Nm gencat
 .Ar output-file
 .Ar input-file Op Ar input-file...
 .Sh DESCRIPTION
