--- a/bin/date/date.1
+++ b/bin/date/date.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: date.1,v 1.16 1998/11/28 03:20:32 aaron Exp $
+.\"	$OpenBSD: date.1,v 1.17 1998/12/15 01:20:18 aaron Exp $
 .\"	$NetBSD: date.1,v 1.12 1996/03/12 04:32:37 phil Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1993
@@ -122,10 +122,10 @@ The canonical representation for setting the date and time is:
 .Pp
 .Bl -tag -width Ds -compact -offset indent
 .It Ar yy
-Year in abbreviated form (e.g. 89 for 1989, 06 for 2006).
+Year in abbreviated form (for years falling within 1969\(em2068).
 The format
 .Ar ccyymmddHHMM
-is also permitted, for non-ambiguous years beyond 1999.
+is also permitted, for non-ambiguous years.
 .It Ar mm
 Numeric month, a number from 1 to 12.
 .It Ar dd
