man pages belong in section 8

--- a/sbin/ipf/Attic/ipf.1
+++ b/sbin/ipf/Attic/ipf.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ipf.1,v 1.12 1998/01/26 04:13:32 dgregor Exp $
+.\"	$OpenBSD: ipf.1,v 1.13 1998/09/15 09:55:44 pattonme Exp $
 .TH IPF 1
 .SH NAME
 ipf \- alters packet filtering lists for IP packet input and output
