--- a/sbin/ipf/Attic/ipf.8
+++ b/sbin/ipf/Attic/ipf.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ipf.8,v 1.1 1999/02/07 00:48:29 deraadt Exp $
+.\"	$OpenBSD: ipf.8,v 1.2 1999/02/07 01:54:18 millert Exp $
 .Dd February 6, 1999
 .Dt IPF 1
 .Os
@@ -114,7 +114,7 @@ Name of the
 state socket
 .Sh SEE ALSO
 .Xr ipftest 1 ,
-.Xr ipnat 1 ,
+.Xr ipnat 8 ,
 .Xr ipf 4 ,
 .Xr ipl 4 ,
 .Xr ipnat 4 ,
