--- a/usr.sbin/ipmon/Attic/ipmon.8
+++ b/usr.sbin/ipmon/Attic/ipmon.8
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: ipmon.8,v 1.7 1998/12/28 10:08:42 hugh Exp $          
+.\"     $OpenBSD: ipmon.8,v 1.8 1999/02/05 05:58:48 deraadt Exp $          
 .TH ipmon 8
 .SH NAME
 ipmon \- monitors /dev/ipl for logged packets
@@ -110,7 +110,7 @@ recorded data.
 .br
 /dev/ipstate
 .SH SEE ALSO
-ipf(1), ipftest(1), ipnat(1), ipf(4), ipl(4), ipnat(4), ipf(5), ipnat(5), ipfstat(8)
+ipf(8), ipftest(1), ipnat(8), ipf(4), ipl(4), ipnat(4), ipf(5), ipnat(5), ipfstat(8)
 .br
 http://coombs.anu.edu.au/ipfilter/
 .SH BUGS
