--- a/usr.bin/find/find.1
+++ b/usr.bin/find/find.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: find.1,v 1.16 1998/09/26 19:54:43 aaron Exp $
+.\"	$OpenBSD: find.1,v 1.17 1998/11/11 23:01:43 aaron Exp $
 .\" Copyright (c) 1990, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
@@ -435,12 +435,15 @@ utility syntax is a superset of the syntax specified by the
 standard.
 .Pp
 The options and primaries
+.Ic -amin ,
+.Ic -cmin ,
 .Ic -empty ,
 .Ic -follow ,
 .Ic -fstype ,
 .Ic -inum ,
 .Ic -links ,
 .Ic -ls ,
+.Ic -mmin ,
 .Ic -maxdepth ,
 .Ic -mindepth ,
 .Ic -execdir ,
