--- a/sbin/ipf/Attic/ipf.8
+++ b/sbin/ipf/Attic/ipf.8
@@ -1,6 +1,6 @@
-.\"	$OpenBSD: ipf.8,v 1.2 1999/02/07 01:54:18 millert Exp $
+.\"	$OpenBSD: ipf.8,v 1.3 1999/02/10 22:12:52 deraadt Exp $
 .Dd February 6, 1999
-.Dt IPF 1
+.Dt IPF 8
 .Os
 .Sh NAME
 .Nm ipf
