--- a/usr.bin/ctags/ctags.1
+++ b/usr.bin/ctags/ctags.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ctags.1,v 1.2 1996/06/26 05:32:27 deraadt Exp $
+.\"	$OpenBSD: ctags.1,v 1.3 1998/09/23 04:32:38 aaron Exp $
 .\"	$NetBSD: ctags.1,v 1.4 1995/03/26 20:14:04 glass Exp $
 .\"
 .\" Copyright (c) 1987, 1990, 1993
@@ -185,7 +185,7 @@ and
 .Nm procedures
 for
 .Tn FORTRAN
-and Pascal is done is a very simple-minded way.  No attempt
+and Pascal is done in a very simple-minded way.  No attempt
 is made to deal with block structure; if you have two Pascal procedures
 in different blocks with the same name you lose.
 .Nm ctags
