--- a/bin/ksh/ksh.1
+++ b/bin/ksh/ksh.1
@@ -1,5 +1,5 @@
 '\" t
-.\"	$OpenBSD: ksh.1tbl,v 1.12 1998/10/29 04:09:20 millert Exp $
+.\"	$OpenBSD: ksh.1tbl,v 1.13 1999/01/19 20:41:53 millert Exp $
 .\"{{{}}}
 .\"{{{  Notes about man page
 .\"     - use the pseudo-macros .sh( and .sh) to begin and end sh-specific
@@ -2016,7 +2016,7 @@ T}
 Causes the \fBcd\fP and \fBpwd\fP commands to use `physical'
 (\fIi.e.\fP, the filesystem's) \fB..\fP directories instead of `logical'
 directories (\fIi.e.\fP,  the shell handles \fB..\fP, which allows the user
-to be obliveous of symlink links to directories).
+to be oblivious of symlink links to directories).
 Clear by default.  Note that setting
 this option does not effect the current value of the \fBPWD\fP parameter;
 only the \fBcd\fP command changes \fBPWD\fP.
