--- a/bin/ls/ls.1
+++ b/bin/ls/ls.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ls.1,v 1.13 1998/12/15 01:20:23 aaron Exp $
+.\"	$OpenBSD: ls.1,v 1.14 1999/02/20 18:59:25 deraadt Exp $
 .\"	$NetBSD: ls.1,v 1.14 1995/12/05 02:44:01 jtc Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1991, 1993, 1994
@@ -182,9 +182,6 @@ This is the default when
 output is not to a terminal.
 .It Fl x
 Multi-column output sorted across the page rather than down the page.
-.It Fl \&1
-(The numeric digit ``one.'')  Force output to be
-one entry per line.
 .El
 .Pp
 The
