--- a/sbin/ifconfig/ifconfig.8
+++ b/sbin/ifconfig/ifconfig.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ifconfig.8,v 1.19 1998/12/15 01:20:32 aaron Exp $
+.\"	$OpenBSD: ifconfig.8,v 1.20 1999/02/26 19:31:50 jason Exp $
 .\"	$NetBSD: ifconfig.8,v 1.11 1996/01/04 21:27:29 pk Exp $
 .\"     $FreeBSD: ifconfig.8,v 1.16 1998/02/01 07:03:29 steve Exp $
 .\"
@@ -313,7 +313,7 @@ Disable the use of a
 link level encapsulation.
 .It Cm link[0-2]
 Enable special processing of the link level of the interface.
-These three options are interface specific in actual effect, however,
+These three options are interface specific in actual effect; however,
 they are in general used to select special modes of operation. An example
 of this is to enable SLIP compression, or to select the connector type
 for some ethernet cards.  Refer to the man page for the specific driver
