--- a/usr.sbin/named/man/Attic/dig.1
+++ b/usr.sbin/named/man/Attic/dig.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: dig.1,v 1.7 1998/07/24 00:43:58 espie Exp $
+.\"	$OpenBSD: dig.1,v 1.8 1998/12/16 02:47:52 aaron Exp $
 .\" $From: dig.1,v 8.2 1997/06/01 20:34:33 vixie Exp $
 .\"
 .\" ++Copyright++ 1993
@@ -372,7 +372,7 @@ The default
 means that the
 .Nm
 environment
-does not stick, hence options specified on a single line
+does not stick; that is, options specified on a single line
 in a
 .Nm
 batch file will remain in effect for
