--- a/share/man/man4/man4.vax/Attic/up.4
+++ b/share/man/man4/man4.vax/Attic/up.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: up.4,v 1.2 1996/03/29 10:17:35 niklas Exp $
+.\"	$OpenBSD: up.4,v 1.3 1998/09/24 07:08:39 pjanzen Exp $
 .\"	$NetBSD: up.4,v 1.3 1996/03/03 17:14:12 thorpej Exp $
 .\"
 .\" Copyright (c) 1980,1988, 1991 Regents of the University of California.
@@ -251,7 +251,6 @@ The
 driver appeared in
 .Bx 4.0 .
 .Sh BUGS
-.Pp
 A program to analyze the logged error information (even in its
 present reduced form) is needed.
 .Pp
