--- a/share/man/man5/utmp.5
+++ b/share/man/man5/utmp.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: utmp.5,v 1.7 1998/11/26 04:26:00 aaron Exp $
+.\"	$OpenBSD: utmp.5,v 1.8 1998/11/29 15:47:25 aaron Exp $
 .\"	$NetBSD: utmp.5,v 1.5 1994/11/30 19:31:35 jtc Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
@@ -185,6 +185,16 @@ character indicates the time prior to the change and the
 .Dq \&{
 character indicates the new time.
 .El
+.Sh CAVEATS
+The strings in the
+.Fa utmp
+and
+.Fa lastlog
+structures are
+.Em not
+normal
+.Sq C
+strings are are thus not guaranteed to be NUL-terminated.
 .Sh FILES
 .Bl -tag -width /var/log/lastlog -compact
 .It Pa /var/run/utmp
