--- a/sbin/ipf/Attic/ipf.8
+++ b/sbin/ipf/Attic/ipf.8
@@ -1,10 +1,10 @@
-.\"	$OpenBSD: ipf.8,v 1.5 1999/03/06 23:18:23 deraadt Exp $
+.\"	$OpenBSD: ipf.8,v 1.6 1999/04/02 16:21:35 aaron Exp $
 .Dd February 6, 1999
 .Dt IPF 8
 .Os
 .Sh NAME
 .Nm ipf
-.Nd alters packet filtering lists for IP packet input and output
+.Nd "alters packet filtering lists for IP packet input and output"
 .Sh SYNOPSIS
 .Nm ipf
 .Op Fl AdDEInorsUvyzZ
