--- a/bin/csh/csh.1
+++ b/bin/csh/csh.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: csh.1,v 1.22 1999/03/04 08:58:10 deraadt Exp $
+.\"	$OpenBSD: csh.1,v 1.23 1999/03/11 01:35:00 pjanzen Exp $
 .\"	$NetBSD: csh.1,v 1.10 1995/03/21 09:02:35 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1993
@@ -1800,7 +1800,7 @@ number of cpu-seconds to be used by each process),
 beyond the end of the program text),
 .Ar stacksize
 (the maximum
-size of the automatically-extended stack region), and
+size of the automatically extended stack region), and
 .Ar coredumpsize
 (the size of the largest core dump that will be created).
 .Pp
