--- a/sbin/ipsecadm/Attic/ipsecadm.8
+++ b/sbin/ipsecadm/Attic/ipsecadm.8
@@ -1,4 +1,4 @@
-.\" $OpenBSD: ipsecadm.8,v 1.4 1999/03/02 18:29:34 deraadt Exp $
+.\" $OpenBSD: ipsecadm.8,v 1.5 1999/03/30 03:29:03 provos Exp $
 .\" Copyright 1997 Niels Provos <provos@physnet.uni-hamburg.de>
 .\" All rights reserved.
 .\"
@@ -369,10 +369,10 @@ ipsecadm old ah -auth md5 -spi 1001 -dst 169.20.12.2 -src 169.20.12.3 \e\
 	-key 12341234deadbeef
 .Ed
 .Sh SEE ALSO
-.Xr services 5 ,
-.Xr protocols 5 ,
 .Xr netstat 1 ,
-.Xr isakmpd 8 ,
 .Xr ipsec 4 ,
-.Xr vpn 8 ,
-.Xr photurisd 8
+.Xr protocols 5 ,
+.Xr services 5 ,
+.Xr isakmpd 8 ,
+.Xr photurisd 8 ,
+.Xr vpn 8
