--- a/share/man/man4/man4.sparc/esp.4
+++ b/share/man/man4/man4.sparc/esp.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: esp.4,v 1.1 1998/03/07 23:34:08 johns Exp $
+.\"	$OpenBSD: esp.4,v 1.2 1998/07/13 02:42:16 jason Exp $
 .\"
 .\" Copyright (c) 1998 The OpenBSD Project 
 .\" All rights reserved.
@@ -41,5 +41,5 @@ disconnect/reselect enabled on the premise that tape devices normally
 have one of these targets.  Tape devices should be allowed to disconnect
 for the SCSI bus to operate acceptably.
 .Sh SEE ALSO
-.Xr si 4
+.Xr si 4 ,
 .Xr sw 4
