--- a/share/man/man4/man4.sparc/Attic/ms.4
+++ b/share/man/man4/man4.sparc/Attic/ms.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ms.4,v 1.1 1998/03/07 21:17:06 johns Exp $
+.\"	$OpenBSD: ms.4,v 1.2 1998/03/08 01:16:08 johns Exp $
 .\"	$NetBSD: ms.4,v 1.2 1997/10/08 22:00:12 jtc Exp $
 .\"
 .\" Copyright (c) 1996 The NetBSD Foundation, Inc.
@@ -84,7 +84,7 @@ Get translation mode. The argument is of type
 is always returned.
 .El
 .Sh SEE ALSO
-.Xr kbd 4
+.Xr kbd 4 ,
 .Xr zs 4
 .Sh BUGS
 .Nm
