--- a/share/man/man4/man4.sparc/qec.4
+++ b/share/man/man4/man4.sparc/qec.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: qec.4,v 1.6 1998/11/12 17:47:10 deraadt Exp $
+.\"     $OpenBSD: qec.4,v 1.7 1999/02/02 02:29:59 jason Exp $
 .\"
 .\" Copyright (c) 1998 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -50,8 +50,8 @@ This driver, like other busses, is not directly available to users.
 In essence it is a buffering DMA controller.
 .Sh SEE ALSO
 .Xr be 4 ,
-.Xr qe 4 ,
-.Xr intro 4
+.Xr intro 4 ,
+.Xr qe 4
 .Sh HISTORY
 .Ox
 support for the
