--- a/share/man/man4/man4.vax/Attic/vv.4
+++ b/share/man/man4/man4.vax/Attic/vv.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: vv.4,v 1.2 1996/03/29 10:17:43 niklas Exp $
+.\"	$OpenBSD: vv.4,v 1.3 1998/09/06 22:23:20 aaron Exp $
 .\"	$NetBSD: vv.4,v 1.3 1996/03/03 17:14:18 thorpej Exp $
 .\"
 .\" Copyright (c) 1983, 1991 The Regents of the University of California.
@@ -120,8 +120,8 @@ an immediate
 .Em panic: vs_olen .
 .El
 .Sh SEE ALSO
-.Xr netintro 4 ,
-.Xr inet 4
+.Xr inet 4 ,
+.Xr netintro 4
 .Sh HISTORY
 The
 .Nm
