--- a/usr.bin/chpass/chpass.1
+++ b/usr.bin/chpass/chpass.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: chpass.1,v 1.8 1998/06/14 18:12:23 deraadt Exp $
+.\"	$OpenBSD: chpass.1,v 1.9 1998/09/23 04:32:36 aaron Exp $
 .\"	$NetBSD: chpass.1,v 1.7 1996/05/15 21:50:40 jtc Exp $
 .\"
 .\" Copyright (c) 1988, 1990, 1993
@@ -216,8 +216,8 @@ temporary copy of the user passwd information
 list of approved shells
 .El
 .Sh SEE ALSO
-.Xr login 1 ,
 .Xr finger 1 ,
+.Xr login 1 ,
 .Xr passwd 1 ,
 .Xr getusershell 3 ,
 .Xr passwd 5 ,
