--- a/usr.sbin/mopd/mopa.out/mopa.out.1
+++ b/usr.sbin/mopd/mopa.out/mopa.out.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mopa.out.1,v 1.2 1996/09/21 18:04:55 maja Exp $
+.\"	$OpenBSD: mopa.out.1,v 1.3 1999/05/15 02:17:57 aaron Exp $
 .\"
 .\" Copyright (c) 1996 Mats O Jansson.  All rights reserved.
 .\"
@@ -27,7 +27,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" @(#) $OpenBSD: mopa.out.1,v 1.2 1996/09/21 18:04:55 maja Exp $
+.\" @(#) $OpenBSD: mopa.out.1,v 1.3 1999/05/15 02:17:57 aaron Exp $
 .\"
 .Dd August 11, 1996
 .Dt MOPA.OUT 1
@@ -52,7 +52,7 @@ This program just supports the VAX machine-id for now.
 .Sh SEE ALSO
 .Xr mopchk 1 ,
 .Xr mopprobe 1 ,
-.Xr moptrace 1 
+.Xr moptrace 1 ,
 .Xr a.out 5 ,
 .Xr mopd 8
 .Sh AUTHORS
