remove trailing whitespace, some Nm cleanup

--- a/usr.sbin/ipmon/Attic/ipmon.8
+++ b/usr.sbin/ipmon/Attic/ipmon.8
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: ipmon.8,v 1.9 1999/02/10 22:12:54 deraadt Exp $          
+.\"     $OpenBSD: ipmon.8,v 1.10 1999/03/10 21:25:30 pjanzen Exp $
 .TH ipmon 8
 .SH NAME
 ipmon \- monitors /dev/ipl for logged packets
