Some share/man fleshing.

--- a/share/man/man5/intro.5
+++ b/share/man/man5/intro.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: intro.5,v 1.1 1999/07/09 21:38:54 hugh Exp $
+.\"	$OpenBSD: intro.5,v 1.2 2000/03/22 21:34:55 aaron Exp $
 .\"
 .\" Copyright (c) 1999 Hugh Graham
 .\"
@@ -48,6 +48,6 @@ composition of database files
 .El
 .Sh HISTORY
 The
-.Nm intro
+.Nm
 section manual page appeared in
 .Ox 2.5 .
