Insert some missing commas.

--- a/bin/chmod/chflags.1
+++ b/bin/chmod/chflags.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: chflags.1,v 1.11 2000/04/15 11:45:54 aaron Exp $
+.\"	$OpenBSD: chflags.1,v 1.1 2000/07/19 19:42:31 mickey Exp $
 .\"	$NetBSD: chflags.1,v 1.4 1995/08/31 22:50:22 jtc Exp $
 .\"
 .\" Copyright (c) 1989, 1990, 1993, 1994
@@ -127,7 +127,7 @@ option is set,
 on a symbolic link always succeeds and has no effect.
 The
 .Fl H ,
-.Fl L
+.Fl L ,
 and
 .Fl P
 options are ignored unless the
