Remove ipf.  Darren Reed has interpreted his (old, new, whichever) licence in a way that makes ipf not free according to the rules we established over 5 years ago, at www.openbsd.org/goals.html (and those same basic rules govern the other *BSD projects too).  Specifically, Darren says that modified versions are not permitted.  But software which OpenBSD uses and redistributes must be free to all (be they people or companies), for any purpose they wish to use it, including modification, use, peeing on, or even integration into baby mulching machines or atomic bombs to be dropped on Australia.  Furthermore, we know of a number of companies using ipf with modification like us, who are now in the same situation, and we hope that some of them will work with us to fill this gap that now exists in OpenBSD (temporarily, we hope).

--- a/usr.sbin/ipsend/ipsend/Attic/ipsend.1
+++ b/usr.sbin/ipsend/ipsend/Attic/ipsend.1
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: ipsend.1,v 1.6 2000/08/23 03:19:39 ericj Exp $
+.\"     $OpenBSD: ipsend.1,v 1.7 2000/11/08 19:37:35 aaron Exp $
 .Dd August 22, 2000
 .Dt IPSEND 1
 \!\" Originally by Darren Reed <darrenr@cyber.com.au>
