switch from primes to moduli

--- a/share/man/man5/Attic/primes.5
+++ b/share/man/man5/Attic/primes.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: primes.5,v 1.1 2001/06/14 13:53:50 provos Exp $
+.\" $OpenBSD: primes.5,v 1.2 2001/06/14 20:00:46 deraadt Exp $
 .\"
 .\" Copyright 1997, 2000 William Allen Simpson <wsimpson@greendragon.com>
 .\" All rights reserved.
