we don't like: o) .Pp before/after .Sh; o) .Pp before/after .Rs/.Re; o) .Nm without argument in SYNOPSIS;

--- a/sbin/ipsecadm/Attic/ipsecadm.8
+++ b/sbin/ipsecadm/Attic/ipsecadm.8
@@ -1,4 +1,4 @@
-.\" $OpenBSD: ipsecadm.8,v 1.40 2001/07/05 08:38:36 jjbg Exp $
+.\" $OpenBSD: ipsecadm.8,v 1.41 2001/07/06 06:13:16 jasoni Exp $
 .\"
 .\" Copyright 1997 Niels Provos <provos@physnet.uni-hamburg.de>
 .\" All rights reserved.
@@ -57,7 +57,6 @@ Enable the IPComp protocol
 .Pp
 To enable these operations across reboots, see
 .Pa /etc/sysctl.conf .
-.Pp
 .Sh DESCRIPTION
 The
 .Nm ipsecadm
