Remove unsupported drek

--- a/share/man/man4/man4.pc532/Attic/lpt.4
+++ b/share/man/man4/man4.pc532/Attic/lpt.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: lpt.4,v 1.6 2000/03/02 14:46:48 todd Exp $
+.\"	$OpenBSD: lpt.4,v 1.7 2001/06/23 07:04:15 pjanzen Exp $
 .\"	$NetBSD: lpt.4,v 1.2 1995/11/28 08:03:29 jtc Exp $
 .\"
 .\" Copyright (c) 1994 Matthias Pfaller.
