Move manpages for the powerpc -> macppc port rename.

--- a/share/man/man4/man4.powerpc/Attic/autoconf.4
+++ b/share/man/man4/man4.powerpc/Attic/autoconf.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD$
+.\"	$OpenBSD: autoconf.4,v 1.1 2001/08/21 02:34:32 pvalchev Exp $
 .\"
 .\" Copyright (c) 1994 Christopher G. Demetriou
 .\" All rights reserved.
