Add man page for apio

--- a/share/man/man4/man4.sparc64/asio.4
+++ b/share/man/man4/man4.sparc64/asio.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD$
+.\"	$OpenBSD: asio.4,v 1.1 2002/03/14 01:45:56 jason Exp $
 .\"
 .\" Copyright (c) 2002 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -65,4 +65,3 @@ Only revision
 .Tn 210sj
 is known to work.
 Minor work may be necessary for other revisions of this card.
-Also, the parallel port is not currently supported.
