bye bye, use netstat -inalv; itojun ok

--- a/usr.sbin/ifmcstat/Attic/ifmcstat.8
+++ b/usr.sbin/ifmcstat/Attic/ifmcstat.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ifmcstat.8,v 1.7 2001/07/20 19:09:47 mpech Exp $
+.\"	$OpenBSD: ifmcstat.8,v 1.8 2001/11/16 04:46:54 itojun Exp $
 .\"	$KAME: ifmcstat.8,v 1.5 2001/07/15 06:15:07 jinmei Exp $
 .\"
 .\" Copyright (C) 1995, 1996, 1997, 1998, and 1999 WIDE Project.
