Manual pages update to reflect the sparc wscons changes.

--- a/share/man/man4/man4.sparc/Attic/ms.4
+++ b/share/man/man4/man4.sparc/Attic/ms.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ms.4,v 1.6 2001/06/23 07:04:20 pjanzen Exp $
+.\"	$OpenBSD: ms.4,v 1.7 2001/10/05 14:45:54 mpech Exp $
 .\"	$NetBSD: ms.4,v 1.2 1997/10/08 22:00:12 jtc Exp $
 .\"
 .\" Copyright (c) 1996 The NetBSD Foundation, Inc.
