Don't Xr dm(8), which no longer exists; David Krause

--- a/share/man/man6/intro.6
+++ b/share/man/man6/intro.6
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: intro.6,v 1.1 1999/05/23 14:11:40 hugh Exp $
+.\"	$OpenBSD: intro.6,v 1.2 2001/08/22 12:15:46 heko Exp $
 .\"
 .\" Copyright (c) 1999 Hugh Graham
 .\"
@@ -43,8 +43,7 @@ A listing of the section's entries can be displayed with the command:
 .Pp
 $ apropos '(6)'
 .Sh SEE ALSO
-.Xr intro 1 ,
-.Xr dm 8
+.Xr intro 1
 .Pp
 Tutorials in the
 .%T "UNIX User's Manual Supplementary Documents" .
