sync usage(). -- Ok'd by: deraadt@

--- a/sbin/fsck/fsck.8
+++ b/sbin/fsck/fsck.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: fsck.8,v 1.17 2000/11/09 17:52:56 aaron Exp $
+.\"	$OpenBSD: fsck.8,v 1.18 2001/04/23 15:30:26 aaron Exp $
 .\"	$NetBSD: fsck.8,v 1.14 1996/10/03 20:08:29 christos Exp $
 .\"
 .\" Copyright (c) 1996 Christos Zoulas.  All rights reserved.
@@ -36,7 +36,7 @@
 .Nd filesystem consistency check and interactive repair
 .Sh SYNOPSIS
 .Nm fsck
-.Op Fl dvplfyn
+.Op Fl dvpfny
 .Op Fl l Ar maxparallel
 .Op Fl t Ar fstype
 .Op Fl T Ar fstype:fsoptions
