- Add missing cdid command to cdio.1. - Remove ambiguity between cddbinfo and cdid commands, so CD matches   cddbinfo and CDI cdid. millert@ ok.

--- a/usr.bin/cdio/cdio.1
+++ b/usr.bin/cdio/cdio.1
@@ -136,6 +136,8 @@ Print the table of contents.
 Print the table of contents after matching the disc with the cddb.
 In case of multiple matches, reissue the command with
 .Ar n
+.It Ic cdid
+Print the disc id that will be used for matching with the cddb.
 .It Ic status
 Print information about the disc:
 the current playing status and position,
