Time to cleanup: o) start new sentence on a new line; o) wrap long lines; o) don't use .Pp before/after .Sh, .Ss; o) OpenBSD -> .Ox; o) typos; o) close .Rs; o) use space between arguments in tag, for example:    .Xr blabla ) .
miod@ ok

--- a/share/man/man5/pf.conf.5
+++ b/share/man/man5/pf.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pf.conf.5,v 1.102 2002/11/04 14:30:21 dhartmei Exp $
+.\"	$OpenBSD: pf.conf.5,v 1.103 2002/11/06 00:30:04 henning Exp $
 .\"
 .\" Copyright (c) 2002, Daniel Hartmeier
 .\" All rights reserved.
@@ -177,7 +177,6 @@ One can unset the loginterface using
 .Bd -literal
     set loginterface none
 .Ed
-.Pp
 .Ss limit
 Sets hard limits on the memory pools used by the packet filter.
 See
