more SEE ALSO fixes.

--- a/usr.bin/grep/grep.1
+++ b/usr.bin/grep/grep.1
@@ -245,8 +245,8 @@ and in the absence of other errors (a bad regular expression)
 the exit value is determined only by whether or not matches
 were found. (XX Should -s do the same??)
 .Sh SEE ALSO
-.Xr re_format 7 ,
 .Xr regex 3 ,
+.Xr re_format 7
 .Sh HISTORY
 A
 .Nm grep
