yet another round of SEE ALSO fixes.

--- a/usr.sbin/mopd/mopprobe/mopprobe.1
+++ b/usr.sbin/mopd/mopprobe/mopprobe.1
@@ -83,7 +83,7 @@ Show all nodes sending MOP/RC SID messages.
 .Sh SEE ALSO
 .Xr mopa.out 1 ,
 .Xr mopchk 1 ,
-.Xr mopd 8 ,
-.Xr moptrace 8
+.Xr moptrace 1 ,
+.Xr mopd 8
 .Sh AUTHORS
 Mats O Jansson (moj@stacken.kth.se).
