dsetination -> destination; from Yasholomew Yashinski.

--- a/sbin/ifconfig/ifconfig.8
+++ b/sbin/ifconfig/ifconfig.8
@@ -217,7 +217,7 @@ Packets routed to this interface will be encapsulated in
 IPv4 or IPv6, depending on the source and destination address families.
 Both addresses must be of the same family.
 .It Cm deletetunnel
-Removes the source and dsetination tunnel addresses,
+Removes the source and destination tunnel addresses,
 configured onto a tunnel interface.
 .It Cm ipdst
 This is used to specify an Internet host who is willing to receive
