Add HISTORY section

--- a/share/man/man5/Attic/passwd.conf.5
+++ b/share/man/man5/Attic/passwd.conf.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: passwd.conf.5,v 1.14 2001/09/03 19:20:24 millert Exp $
+.\" $OpenBSD: passwd.conf.5,v 1.15 2002/05/27 21:12:54 itojun Exp $
 .\"
 .\" Copyright 1997 Niels Provos <provos@physnet.uni-hamburg.de>
 .\" All rights reserved.
@@ -120,3 +120,10 @@ The old Unix crypt is used as YP cipher:
 .Xr passwd 1 ,
 .Xr pw_getconf 3 ,
 .Xr passwd 5
+.Sh HISTORY
+The
+.Pa /etc/passwd.conf
+file appeared in
+.Ox 2.1
+and was deprecated in
+.Ox 3.0 .
