correct clri description; from Dan Weeks <danimal at danimal dot org> via PR/3034.

--- a/sbin/fsdb/fsdb.8
+++ b/sbin/fsdb/fsdb.8
@@ -90,8 +90,9 @@ as the new current inode.
 .It Cm back
 Revert to the previously current inode.
 .Pp
-.It Cm clri
-Clear the current inode.
+.It Cm clri Ar i-number
+Clear the inode
+.Ar i-number .
 .Pp
 .It Cm lookup Ar name , Cm cd Ar name
 Find
