amiga and sun3 turned out to not be y2k+3 compliant here. Remove them, as well as the few userland tools which were only used on these platforms.

--- a/share/man/man4/man4.sun3/Attic/leds.4
+++ b/share/man/man4/man4.sun3/Attic/leds.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: leds.4,v 1.3 2000/01/22 02:17:55 aaron Exp $
+.\"	$OpenBSD: leds.4,v 1.4 2001/10/05 14:45:54 mpech Exp $
 .\"
 .Dd March 2, 1996
 .Dt LEDS 4 sun3
