remove bind4; ok deraadt@

--- a/usr.sbin/named/man/Attic/dnsquery.1
+++ b/usr.sbin/named/man/Attic/dnsquery.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: dnsquery.1,v 1.6 2000/03/14 21:31:37 aaron Exp $
+.\"	$OpenBSD: dnsquery.1,v 1.7 2001/08/24 22:59:40 rohee Exp $
 .TH DNSQUERY 1 "10 March 1990"
 .UC 6
 .SH NAME
