remove bind4; ok deraadt@

--- a/usr.sbin/named/man/Attic/ndc.8
+++ b/usr.sbin/named/man/Attic/ndc.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ndc.8,v 1.5 2000/04/17 02:32:49 aaron Exp $
+.\"	$OpenBSD: ndc.8,v 1.6 2000/08/18 22:12:44 brad Exp $
 .\" Copyright (c) 1994
 .\"    The Regents of the University of California.  All rights reserved.
 .\"
