remove bind4; ok deraadt@

--- a/usr.sbin/named/man/Attic/named-xfer.8
+++ b/usr.sbin/named/man/Attic/named-xfer.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: named-xfer.8,v 1.4 1998/05/31 17:35:10 millert Exp $
+.\"	$OpenBSD: named-xfer.8,v 1.5 1999/06/05 22:17:39 aaron Exp $
 .\" ++Copyright++ 1985
 .\" -
 .\" Copyright (c) 1985
