remove bind4; ok deraadt@

--- a/usr.sbin/named/man/Attic/host.1
+++ b/usr.sbin/named/man/Attic/host.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: host.1,v 1.5 2000/03/14 21:31:37 aaron Exp $
+.\"	$OpenBSD: host.1,v 1.6 2000/08/02 15:58:09 provos Exp $
 .\"
 .\"	@(#)host.1              e07@nikhef.nl (Eric Wassenaar) 961010
 .\"
