remove bind4; ok deraadt@

--- a/usr.sbin/named/man/Attic/named.reload.8
+++ b/usr.sbin/named/man/Attic/named.reload.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: named.reload.8,v 1.2 1997/03/12 10:42:16 downsj Exp $
+.\"	$OpenBSD: named.reload.8,v 1.3 1999/06/05 22:17:42 aaron Exp $
 .\" ++Copyright++ 1987, 1993
 .\" -
 .\" Copyright (c) 1987, 1993
