not used, when the driver works, add it back

--- a/share/man/man4/man4.vax/Attic/ik.4
+++ b/share/man/man4/man4.vax/Attic/ik.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ik.4,v 1.3 1999/06/05 13:18:38 aaron Exp $
+.\"	$OpenBSD: ik.4,v 1.4 2001/11/13 13:54:26 mpech Exp $
 .\"	$NetBSD: ik.4,v 1.3 1996/03/03 17:13:42 thorpej Exp $
 .\"
 .\" Copyright (c) 1983, 1991 Regents of the University of California.
