not used, when the driver works, add it back

--- a/share/man/man4/man4.vax/Attic/pcl.4
+++ b/share/man/man4/man4.vax/Attic/pcl.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pcl.4,v 1.6 2001/06/23 07:04:24 pjanzen Exp $
+.\"	$OpenBSD: pcl.4,v 1.7 2001/10/05 14:45:54 mpech Exp $
 .\"	$NetBSD: pcl.4,v 1.3 1996/03/03 17:13:57 thorpej Exp $
 .\"
 .\" Copyright (c) 1983, 1991 Regents of the University of California.
