not used, when the driver works, add it back

--- a/share/man/man4/man4.vax/Attic/hy.4
+++ b/share/man/man4/man4.vax/Attic/hy.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: hy.4,v 1.4 1999/06/05 13:18:38 aaron Exp $
+.\"	$OpenBSD: hy.4,v 1.5 2001/10/05 14:45:54 mpech Exp $
 .\"	$NetBSD: hy.4,v 1.3 1996/03/03 17:13:41 thorpej Exp $
 .\"
 .\" Copyright (c) 1983, 1991 The Regents of the University of California.
