--- a/share/man/man4/man4.vax/vsbus.4
+++ b/share/man/man4/man4.vax/vsbus.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: vsbus.4,v 1.1 2003/03/06 17:20:30 jason Exp $
+.\"	$OpenBSD: vsbus.4,v 1.2 2003/03/06 17:25:19 jason Exp $
 .\"
 .\" Copyright (c) 2003 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -53,6 +53,8 @@ DZ-11 terminal multiplexer.
 LANCE ethernet interface.
 .It Xr ncr 4
 NCR 5380 SCSI controller.
+.It Xr smg 4
+Small monochrome graphics adapter.
 .It Xr ze 4
 SGEC ethernet interface.
 .Sh SEE ALSO
@@ -61,4 +63,5 @@ SGEC ethernet interface.
 .Xr intro 4 ,
 .Xr le 4 ,
 .Xr ncr 4 ,
+.Xr smg 4 ,
 .Xr ze 4
