remove .Xr to self in SEE ALSO;

--- a/share/man/man4/man4.mvme88k/pcctwo.4
+++ b/share/man/man4/man4.mvme88k/pcctwo.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD$
+.\"	$OpenBSD: pcctwo.4,v 1.1 2003/08/07 19:22:38 miod Exp $
 .\"
 .\" Copyright (c) 2003 Paul Weissmann
 .\" All rights reserved.
@@ -88,5 +88,4 @@ Memory controller ASIC
 .Xr ie 4 ,
 .Xr intro 4 ,
 .\" .Xr memc 4 ,
-.Xr pcctwo 4 ,
 .Xr ssh 4
