Remove OpenBSD/pegaos, this has been announced before but delayed until the tree was stable. No point in code supporting a company which screws its employees being in the OpenBSD tree.

--- a/share/man/man4/man4.pegasos/Attic/intro.4
+++ b/share/man/man4/man4.pegasos/Attic/intro.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: intro.4,v 1.17 2003/08/14 15:29:58 jason Exp $
+.\"	$OpenBSD: intro.4,v 1.1 2003/11/08 16:55:37 miod Exp $
 .\"
 .\" Copyright (c) 2001 Peter Valchev.
 .\" All rights reserved.
