agten(4) documentations updates.

--- a/share/man/man4/man4.sparc64/mgx.4
+++ b/share/man/man4/man4.sparc64/mgx.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mgx.4,v 1.4 2004/02/29 21:44:07 miod Exp $
+.\"	$OpenBSD: mgx.4,v 1.1 2004/06/20 21:31:02 miod Exp $
 .\" Copyright (c) 2003 Miodrag Vallat.  All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
@@ -48,6 +48,7 @@ but makes its functions available via the internal
 .Xr wsdisplay 4
 interface.
 .Sh SEE ALSO
+.Xr agten 4 ,
 .Xr bwtwo 4 ,
 .Xr cgsix 4 ,
 .Xr cgthree 4 ,
