passwd.conf has been deprecated since login.conf was imported. Today it finally dies.  Based on a diff from Gabriel Kihlman.

--- a/share/man/man5/Attic/passwd.conf.5
+++ b/share/man/man5/Attic/passwd.conf.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: passwd.conf.5,v 1.16 2002/11/24 20:46:40 millert Exp $
+.\" $OpenBSD: passwd.conf.5,v 1.17 2003/06/06 13:28:13 jmc Exp $
 .\"
 .\" Copyright 1997 Niels Provos <provos@physnet.uni-hamburg.de>
 .\" All rights reserved.
