Do not install manpages for hardware we do not support (yet). Rename mace to macebus per consistency.

--- a/share/man/man4/man4.sgi/Attic/mace.4
+++ b/share/man/man4/man4.sgi/Attic/mace.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mace.4,v 1.1 2004/08/06 23:51:59 mickey Exp $
+.\"	$OpenBSD: mace.4,v 1.2 2004/08/17 23:49:21 jaredy Exp $
 .\"	$NetBSD: mace.4,v 1.4 2004/02/10 16:54:02 wiz Exp $
 .\"
 .\" Copyright (c) 2002 The NetBSD Foundation, Inc.
