man pages for the clocks on sparc/sparc64.  getting the links right was painful...

--- a/share/man/man4/man4.sparc64/fhc.4
+++ b/share/man/man4/man4.sparc64/fhc.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD$
+.\"     $OpenBSD: fhc.4,v 1.1 2004/09/22 21:51:45 jason Exp $
 .\"
 .\" Copyright (c) 2004 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -44,6 +44,7 @@ These devices are used for board level
 functions on these systems.
 .Sh SEE ALSO
 .Xr central 4 ,
+.Xr clock 4 ,
 .Xr intro 4
 .Sh HISTORY
 .Ox
