ipwcontrol and iwicontrol removal.

--- a/sbin/ipwcontrol/Attic/ipwcontrol.8
+++ b/sbin/ipwcontrol/Attic/ipwcontrol.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD$
+.\"	$OpenBSD: ipwcontrol.8,v 1.4 2004/11/21 23:52:56 jmc Exp $
 .\"
 .\" Copyright (c) 2004
 .\"	Damien Bergamini <damien.bergamini@free.fr>. All rights reserved.
