fix cvs id tags

--- a/sbin/ipsecctl/ipsec.conf.5
+++ b/sbin/ipsecctl/ipsec.conf.5
@@ -1,4 +1,4 @@
-.\"	$Id: ipsec.conf.5,v 1.1.1.1 2005/02/02 21:31:54 hshoexer Exp $
+.\"	$OpenBSD:$
 .\"
 .\" Copyright (c) 2004 Mathieu Sauve-Frankel  All rights reserved.
 .\"
