let us not talk about ipsecadm and vpn anymore; ok reyk

--- a/sbin/ipsecadm/Attic/ipsecadm.8
+++ b/sbin/ipsecadm/Attic/ipsecadm.8
@@ -1,4 +1,4 @@
-.\" $OpenBSD: ipsecadm.8,v 1.69 2005/06/14 15:35:02 hshoexer Exp $
+.\" $OpenBSD: ipsecadm.8,v 1.70 2005/09/27 12:22:03 markus Exp $
 .\"
 .\" Copyright 1997 Niels Provos <provos@physnet.uni-hamburg.de>
 .\" All rights reserved.
