Re-add '-' getopt flag, since getopt can actually handle it.
Requested by deraadt@.

--- a/usr.bin/env/env.1
+++ b/usr.bin/env/env.1
@@ -107,6 +107,10 @@ could not be found.
 .Xr execvp 3 ,
 .Xr environ 7
 .Sh STANDARDS
+The historic
+.Fl
+option has been deprecated but is still supported in this implementation.
+.Pp
 The
 .Nm
 utility conforms to
