fix usage, make synopsis more pretty.  noticed by david@

--- a/sbin/ipsecctl/ipsecctl.8
+++ b/sbin/ipsecctl/ipsecctl.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ipsecctl.8,v 1.17 2006/05/30 21:56:05 msf Exp $
+.\"	$OpenBSD: ipsecctl.8,v 1.18 2006/05/31 07:54:48 jmc Exp $
 .\"
 .\" Copyright (c) 2004, 2005 Hans-Joerg Hoexer <hshoexer@openbsd.org>
 .\"
@@ -23,8 +23,10 @@
 .Sh SYNOPSIS
 .Nm ipsecctl
 .Op Fl dFmnv
+.Xo
 .Oo Fl D
 .Ar macro Ns = Ns Ar value Oc
+.Xc
 .Op Fl f Ar file
 .Op Fl s Ar modifier
 .Sh DESCRIPTION
