Document new stuff and fix a few .Nd lines for consistency.

--- a/share/man/man4/man4.vax/lcg.4
+++ b/share/man/man4/man4.vax/lcg.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: smg.4,v 1.4 2003/06/06 10:29:42 jmc Exp $
+.\"	$OpenBSD: lcg.4,v 1.1 2006/07/28 21:25:21 miod Exp $
 .\"
 .\" Copyright (c) 2003 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -29,7 +29,7 @@
 .Os
 .Sh NAME
 .Nm lcg
-.Nd VAXstation 4000/60 and VLC color frame buffer
+.Nd Low-Cost Graphics color frame buffer
 .Sh SYNOPSIS
 .Cd "lcg0 at vsbus0 csr 0x20100000"
 .Cd "wsdisplay* at lcg?"
