sync sbus scsi device list;

--- a/share/man/man4/man4.sparc/esp.4
+++ b/share/man/man4/man4.sparc/esp.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: esp.4,v 1.8 2004/09/30 19:59:27 mickey Exp $
+.\"	$OpenBSD: esp.4,v 1.9 2006/06/26 22:16:21 miod Exp $
 .\"
 .\" Copyright (c) 1998 The OpenBSD Project
 .\" All rights reserved.
@@ -9,7 +9,7 @@
 .Os
 .Sh NAME
 .Nm esp
-.Nd ESP NCR 53c94 on-board or SBus SCSI controller
+.Nd ESP NCR 53c94 on-board or SBus SCSI interface
 .Sh SYNOPSIS
 .Cd "dma0 at obio0 addr 0xfa001000 level 4             " Pq sun4/300
 .Cd "esp0 at obio0 addr 0xfa000000 level 4 flags 0x00ff000f"
